--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import com.sun.corba.se.impl.util.RepositoryId
+
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'signing'
@@ -90,22 +92,11 @@ if (localUpload && localMavenRepo == null) {
 							name 'Jdroid'
 							url 'http://www.jdroidframework.com'
 						}
-<<<<<<< HEAD
-					}
-					developers {
-						developer {
-							name 'Maxi Rosson'
-							email 'jdroidframework@gmail.com'
-							roles {
-								role 'architect'
-								role 'developer'
-=======
 						licenses {
 							license {
 								name 'The Apache License, Version 2.0'
 								url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
 								distribution 'repo'
->>>>>>> Added release notes and improved build script
 							}
 						}
 						developers {
@@ -152,8 +143,6 @@ def getRepositoryPassword() {
 public def getProp(String propertyName) {
 	return project.hasProperty(propertyName) ? project.ext.get(propertyName) : System.getenv(propertyName)
 }
-<<<<<<< HEAD
-=======
 
 public Boolean getBooleanProp(String propertyName, Boolean defaultValue) {
 	def value = getProp(propertyName)
@@ -241,4 +230,3 @@ if (JavaVersion.current().isJava8Compatible()) {
 		options.addStringOption('Xdoclint:none', '-quiet')
 	}
 }
->>>>>>> Added release notes and improved build script
