--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,11 @@ ext.VERSION_PATCH = 4
 ext.JDROID_GITHUB_REPOSITORY_OWNER = 'maxirosson'
 ext.JDROID_GITHUB_REPOSITORY_NAME = 'jdroid-java-google-drive'
 
+ext.PROJECT_NAME = 'Jdroid Java Connector for Google Drive API'
+description = 'Jdroid Java Connector for Google Drive API'
+
 apply plugin: 'com.jdroid.java.library'
 apply plugin: 'com.jdroid.component.builder'
-
-description = 'Java Connector for Google Drive API'
 
 buildscript {
 	repositories {
@@ -26,7 +27,7 @@ buildscript {
 	}
 	dependencies {
 		classpath 'com.jdroidframework:jdroid-gradle-plugin:0.10.1'
-		classpath 'com.jdroidframework:jdroid-component-builder:0.1.0'
+		classpath 'com.jdroidframework:jdroid-component-builder:0.2.0-SNAPSHOT'
 	}
 }
 
@@ -38,8 +39,8 @@ repositories {
 }
 
 dependencies {
-	compile 'com.google.api-client:google-api-client:1.20.0'
-	compile 'com.google.oauth-client:google-oauth-client-jetty:1.20.0'
-	compile 'com.google.apis:google-api-services-drive:v2-rev170-1.20.0'
+	compile 'com.google.api-client:google-api-client:1.22.0'
+	compile 'com.google.oauth-client:google-oauth-client-jetty:1.22.0'
+	compile 'com.google.apis:google-api-services-drive:v3-rev40-1.22.0'
 	compile 'com.jdroidframework:jdroid-java:0.10.1'
 }
