Upgraded jdroid gradle plugin to v0.16.0

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,4 @@
-ext.VERSION_MAJOR = 0
-ext.VERSION_MINOR = 10
-ext.VERSION_PATCH = 0
+version = '0.11.0'
 
 ext.JDROID_GITHUB_REPOSITORY_OWNER = 'maxirosson'
 ext.JDROID_GITHUB_REPOSITORY_NAME = 'jdroid-java-google-drive'
@@ -21,16 +19,14 @@ buildscript {
 		}
 	}
 	dependencies {
-		classpath 'com.jdroidframework:jdroid-gradle-java-plugin:0.15.0'
+		classpath 'com.jdroidframework:jdroid-gradle-java-plugin:0.16.0'
 		classpath 'com.jdroidframework:jdroid-component-builder:0.3.0-SNAPSHOT'
 	}
 }
 
 repositories {
-	mavenCentral()
-	maven {
-		url "https://oss.sonatype.org/content/repositories/snapshots/"
-	}
+	jcenter()
+	maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 dependencies {
