--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,16 @@ repositories {
 }
 
 dependencies {
-	compile 'com.google.api-client:google-api-client:1.22.0'
-	compile 'com.google.oauth-client:google-oauth-client-jetty:1.22.0'
+
+	compile 'com.google.api-client:google-api-client:1.23.0'
+	compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+
+	// Google Drive API v2
 	compile 'com.google.apis:google-api-services-drive:v2-rev270-1.22.0'
-	compile 'com.jdroidframework:jdroid-java-core:0.13.0'
+
+	// Google Sheets API v4
+	compile 'com.google.apis:google-api-services-sheets:v4-rev499-1.23.0'
+
+	// https://github.com/maxirosson/jdroid-java/blob/master/CHANGELOG.md
+	compile 'com.jdroidframework:jdroid-java-core:0.15.0'
 }
